force-app/main/default/objects/Exclude_Line_Item__c/Exclude_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Exclude Line Item</label>
    <nameField>
        <displayFormat>EX ITEM - {0000}</displayFormat>
        <label>Exclude Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclude Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>