force-app/main/default/objects/Exclude_Line_Item__c/fields/Exclude_Product__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Product__c</fullName>
    <label>Exclude Product</label>
    <referenceTo>Exclude_Product__c</referenceTo>
    <relationshipLabel>Exclude Line Items</relationshipLabel>
    <relationshipName>Exclude_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>