force-app/main/default/objects/Exclude_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Exclude Line Items</relationshipLabel>
    <relationshipName>Exclude_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>